# advent-of-code

./: 2023-day-05-visualization.afdesign  Cargo.toml
2022/: Cargo.toml
2022/challenges/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md
2022/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day17.rs  day18.rs  day19.rs  day20.rs  grid.rs  main.rs
2022/src/day11/: mod.rs  model.rs  parse.rs
2022/src/day12/: mod.rs  search.rs
2022/src/day13/: mod.rs
2022/src/day14/: mod.rs  parse.rs  sim.rs
2022/src/day15/: mod.rs
2022/src/day16/: input.rs  mod.rs
2022/src/day21/: eval.rs  mod.rs  model.rs  parser.rs  reorg.rs  tests.rs
2022/src/day22/: mod.rs  model.rs  parser.rs  tests.rs
2023/: Cargo.toml
2023/src/: grid.rs  lib.rs  main.rs
2024/: Cargo.toml
2024/src/: algo.rs  coord.rs  grid.rs  lib.rs  main.rs  nums.rs  parse.rs
2024/src/day01/: day01.md  day01.rs
2024/src/day02/: day02.md  day02.rs  mod.rs
2024/src/day03/: .input-example-day03-2.txt  day03.md  day03.rs
2024/src/day04/: day04.md  day04.rs
2024/src/day05/: day05.md  day05.rs  part1.rs
2024/src/day06/: day06.md  day06.rs  tests.rs
2024/src/day07/: day07.md  day07.rs  mod.rs  part2.rs  tests.rs
2024/src/day08/: day08.md  day08.rs  mod.rs
2024/src/day09/: day09.md  day09.rs
2024/src/day10/: day10.md  day10.rs
2024/src/day11/: day11.md  day11.rs
2024/src/day12/: day12.md  day12.rs  mod.rs
2024/src/day13/: day13.md  day13.rs
2024/src/day14/: .input-challenge-day14.txt  day14.md  day14.rs  mod.rs
2024/src/day15/: day15.md  day15.rs  mod.rs
2024/src/day16/: day16.md  day16.rs  mod.rs
2024/src/day17/: day17.md  day17.rs
2024/src/day18/: .input-challenge-day18.txt  .input-example-day18.txt  day18.md  day18.rs  mod.rs
2024/src/day19/: day19.md  day19.rs
2024/src/day20/: day20.rs
2024/src/day21/: day21.rs
2024/src/day22/: day22.rs
2024/src/day23/: day23.rs
2024/src/day24/: day24.rs
2024/src/day25/: day25.rs
src/: grid.rs  lib.rs  main.rs
src/day01/: day01.md  mod.rs
src/day02/: mod.rs  model.rs  parse.rs
src/day03/: day03.md  mod.rs
src/day04/: mod.rs
src/day05/: day05.md  input.rs  mod.rs  part1.rs  part2.rs  tests.rs
src/day06/: tests.rs
src/day07/: mod.rs  part1.rs  part2.rs  tests.rs
src/day09/: day09.md  mod.rs
src/day10/: day10.md  mod.rs
src/day11/: day11.md  mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: day14.md  mod.rs
src/day15/: day15.md  mod.rs
src/day16/: mod.rs
src/day17/: mod.rs
src/day18/: mod.rs
src/day19/: mod.rs  model.rs
(+21 files in other folders)
