[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[dependencies]
flexi_logger = "0.29.6"
log = "0.4.22"
nom = "7.1.2"
rand = "0.8.5"
regex = "1.11.1"
thiserror = "2.0.3"
