[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
#strip = true
debug = true

[dependencies]
flexi_logger = "0.29.7"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.17"
nom = "7.1.1"
quote = "1.0.37"
rand = "0.8.5"
rangemap = "1.5.1"
recap = "0.1.2"
regex = "1.10.2"
seq-macro = "0.3.5"
serde = "1.0.193"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.6"
